# Verlet-Physics

./: CMakeLists.txt  LICENSE  README.md
include/: CollisionHandler.h  MainLoop.h  VerletDot.h  VerletObject.h  VerletString.h
src/: CollisionHandler.cpp  MainLoop.cpp  VerletDot.cpp  VerletObject.cpp  VerletString.cpp  main.cpp
